--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Build with Gradle Wrapper (Windows)
         run: |
-          echo JAVA_HOME: %JAVA_HOME%
+          echo GRAALVM_HOME: %GRAALVM_HOME%
           .\gradlew.bat --no-daemon --info nativeCompile
         if: runner.os == 'Windows'
 
