--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -39,8 +39,8 @@ jobs:
 
       - name: Fix the svm.jar of GraalVM ${{ matrix.graalvm-version }} for JDK ${{ matrix.java-version }} (Windows)
         run: |
-          echo GRAALVM_HOME: $env:GRAALVM_HOME
-          copy /y lib\svm-${{matrix.graalvm-version}}-MODIFIED.jar $env:GRAALVM_HOME\lib\svm\builder\svm.jar
+          dir $env:GRAALVM_HOME\lib\svm\builder
+          copy lib\svm-${{matrix.graalvm-version}}-MODIFIED.jar $env:GRAALVM_HOME\lib\svm\builder\svm.jar
         if: runner.os == 'Windows' && matrix.java-version == '17'
 
       - name: Build with Maven Wrapper (Windows)
