--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,10 @@ repositories {
         url "https://oss.sonatype.org/content/repositories/snapshots"
     }
     mavenLocal()
+    //local repository for the custom-built SWT library for Windows on Arm64 -->
+    maven {
+        url "file://$projectDir/lib"
+    }
 }
 
 dependencies {
@@ -97,12 +101,9 @@ dependencies {
             }
             break
         case 'windows-arm64':
-            //No SWT library is yet available for Windows on ARM64;
-            //temporarily use the x64 library, at least for successful compile
-            //(but SWT demos won't work though)
-            implementation("org.eclipse.platform:org.eclipse.swt.win32.win32.x86_64:$swtMavenVersion") {
-                exclude group: 'org.eclipse.platform', module: 'org.eclipse.swt'
-            }
+            //No SWT library for Windows on Arm64 is yet available in Maven Central;
+            //temporarily use a local custom-built SWT library for Windows on Arm64:
+            implementation 'org.eclipse.platform:org.eclipse.swt.win32.win32.aarch64:3.121.0-SNAPSHOT'
             break
         default:
             throw new GradleException('Unknown platform for SWT: ' + currentPlatform)
