--- a/pom.xml
+++ b/pom.xml
@@ -73,19 +73,12 @@
                 <platform>windows-arm64</platform>
             </properties>
             <dependencies>
-                <!-- No SWT library is yet available for Windows on ARM64;
-                     temporarily use the x64 library, at least for successful compile
-                     (but SWT demos won't work though) -->
+                <!-- No SWT library for Windows on Arm64 is yet available in Maven Central;
+                     temporarily use a local custom-built SWT library for Windows on Arm64 -->
                 <dependency>
                     <groupId>org.eclipse.platform</groupId>
-                    <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
-                    <version>${swt.maven.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>org.eclipse.platform</groupId>
-                            <artifactId>org.eclipse.swt</artifactId>
-                        </exclusion>
-                    </exclusions>
+                    <artifactId>org.eclipse.swt.win32.win32.aarch64</artifactId>
+                    <version>3.121.0-SNAPSHOT</version>
                 </dependency>
                 <!-- No BGFX native library is yet available for Windows on ARM64;
                      temporarily use the x64 native library, at least for required native loading
@@ -431,6 +424,11 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
+        </repository>
+        <!-- local repository for the custom-built SWT library for Windows on Arm64 -->
+        <repository>
+            <id>local repository</id>
+            <url>file://${basedir}/lib</url>
         </repository>
     </repositories>
 
