--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'application'
-    id 'org.graalvm.buildtools.native' version '0.9.14'
+    id 'org.graalvm.buildtools.native' version '0.9.16'
     id 'com.google.osdetector' version '1.7.1'
 }
 
@@ -37,9 +37,9 @@ def getCurrentPlatform() {
 
 ext {
     lwjglVersion = project.version
-    jomlVersion = '1.10.5-SNAPSHOT'
+    jomlVersion = '1.10.5'
     swtMavenVersion = '3.121.0'  //contains Eclipse SWT 4.9.5.4 software
-    graalvmVersion = '22.2.0'
+    graalvmVersion = '22.3.0'
 
     //LWJGL modules used: minimal OpenGL, plus bgfx, cuda, jemalloc, par, shaderc, vma, vulkan
     lwjglModules = [
@@ -70,7 +70,7 @@ repositories {
 dependencies {
     implementation "org.joml:joml:$jomlVersion"
     //for compiling GraalVM substitution classes
-    compileOnly files("lib/svm-$graalvmVersion-11-MODIFIED.jar")
+    compileOnly "org.graalvm.sdk:graal-sdk:$graalvmVersion"
 
     //SWT library specific to <os>-<arch> platform string
     //(for 64-bit platforms only)
