--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
         <lwjgl.version>${project.version}</lwjgl.version>
         <swt.maven.version>3.121.0</swt.maven.version> <!-- contains Eclipse SWT 4.9.5.4 software -->
         <joml.version>1.10.5</joml.version>
-        <native.maven.plugin.version>0.9.14</native.maven.plugin.version>
+        <native.maven.plugin.version>0.9.16</native.maven.plugin.version>
         <native.image.dir.name>native-image-${platform}</native.image.dir.name>
-        <graalvm.version>22.2.0</graalvm.version>
+        <graalvm.version>22.3.0</graalvm.version>
         <exec.mainClass>org.lwjgl.demo.DemoLauncher</exec.mainClass>
         <!-- default exec application is the demo launcher, but specific demo class
              can be launched directly via the following property during mvn invoke.
@@ -453,11 +453,10 @@
         </dependency>
         <!-- for compiling GraalVM substitution classes -->
         <dependency>
-            <groupId>org.graalvm.nativeimage</groupId>
-            <artifactId>svm</artifactId>
+            <groupId>org.graalvm.sdk</groupId>
+            <artifactId>graal-sdk</artifactId>
             <version>${graalvm.version}</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/svm-${graalvm.version}-11-MODIFIED.jar</systemPath>
+            <scope>provided</scope>
         </dependency>
         <!-- LWJGL modules used: minimal OpenGL, plus bgfx, cuda, jemalloc, par, shaderc, vma, vulkan -->
         <dependency>
