--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'application'
-    id 'org.graalvm.buildtools.native' version '0.9.16'
+    id 'org.graalvm.buildtools.native' version '0.9.17'
     id 'com.google.osdetector' version '1.7.1'
 }
 
@@ -257,6 +257,9 @@ graalvmNative {
 
             useFatJar = false
         }
+    }
+    metadataRepository {
+        enabled = false
     }
 }
 
