--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
         <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
         <maven.shade.plugin.version>3.2.4</maven.shade.plugin.version>
         <lwjgl.version>${project.version}</lwjgl.version>
-        <swt.maven.version>3.121.0</swt.maven.version> <!-- contains Eclipse SWT 4.9.5.4 software -->
+        <swt.maven.version>3.123.0</swt.maven.version> <!-- contains Eclipse SWT 4.9.5.8 software -->
         <joml.version>1.10.5</joml.version>
-        <native.maven.plugin.version>0.9.17</native.maven.plugin.version>
+        <native.maven.plugin.version>0.9.20</native.maven.plugin.version>
         <native.image.dir.name>native-image-${platform}</native.image.dir.name>
-        <graalvm.version>22.3.0</graalvm.version>
+        <graalvm.version>22.3.1</graalvm.version>
         <exec.mainClass>org.lwjgl.demo.DemoLauncher</exec.mainClass>
         <!-- default exec application is the demo launcher, but specific demo class
              can be launched directly via the following property during mvn invoke.
@@ -78,7 +78,7 @@
                 <dependency>
                     <groupId>org.eclipse.platform</groupId>
                     <artifactId>org.eclipse.swt.win32.win32.aarch64</artifactId>
-                    <version>3.121.0-SNAPSHOT</version>
+                    <version>${swt.maven.version}-SNAPSHOT</version>
                 </dependency>
                 <!-- No BGFX native library is yet available for Windows on ARM64;
                      temporarily use the x64 native library, at least for required native loading
