update to latest LWJGL 3.3.3-SNAPSHOT version
which has built-in support for GraalVM native-image compilation.

--- a/graal-cfg/linux/META-INF/native-image/reflect-config.json
+++ b/graal-cfg/linux/META-INF/native-image/reflect-config.json
@@ -626,14 +626,6 @@
   "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
 },
 {
-  "name":"org.lwjgl.demo.opengl.raytracing.PhotonMappingBindlessDemo",
-  "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
-},
-{
-  "name":"org.lwjgl.demo.opengl.raytracing.PhotonMappingDemo",
-  "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
-},
-{
   "name":"org.lwjgl.demo.opengl.raytracing.TransformFeedbackDemo",
   "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
 },
@@ -703,6 +695,10 @@
 },
 {
   "name":"org.lwjgl.demo.opengl.raytracing.tutorial.Tutorial8_2",
+  "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
+},
+{
+  "name":"org.lwjgl.demo.opengl.sampling.HierarchicalSampleWarping",
   "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
 },
 {
@@ -2245,5 +2241,8 @@
 {
   "name":"sun.security.x509.SubjectKeyIdentifierExtension",
   "methods":[{"name":"<init>","parameterTypes":["java.lang.Boolean","java.lang.Object"] }]
+},
+{
+  "name":"sun.security.x509.X509CertImpl"
 }
 ]
