--- a/res/org/lwjgl/demo/demos-data.properties
+++ b/res/org/lwjgl/demo/demos-data.properties
@@ -583,35 +583,6 @@ description=This demo is an implementation of the paper \
             Author\: Kai Burjack
 class=opengl.raytracing.LinearlyTransformedCosines
 
-[opengl.raytracing.PhotonMappingBindlessDemo]
-description=Photon mapping using bindless cube map textures.\
-            <p>\
-            The same as <code>PhotonMappingDemo</code> BUT it uses ARB_bindless_texture to \
-            have an array of cube map textures without the restriction of equal \
-            dimensions for each cube map. We want each cube map to have the dimension in \
-            proportion to the actual size of the cube it is mapped to.\
-            <p>\
-            Author\: Kai Burjack
-class=opengl.raytracing.PhotonMappingBindlessDemo
-
-[opengl.raytracing.PhotonMappingDemo]
-description=Photon mapping using cubemap array textures.\
-            <p>\
-            This demo uses a cube map array texture to hold a "photon map" for each of \
-            the boxes in the scene.\
-            <p>\
-            A compute shader is used to shoot light rays into the scene and whenever they \
-            hit a box the texel coordinate is computed and the "photon" is stored in the \
-            corresponding face and layer of the cube map array image.\
-            <p>\
-            Afterwards, the scene is rasterized and the cube map array is sampled via a \
-            samplerCubeArray. The boxes are rendered via hardware instancing and the \
-            layer of the cube map array (i.e. the cube map for that particular box \
-            instance) is obtained via the gl_InstanceID.\
-            <p>\
-            Author\: Kai Burjack
-class=opengl.raytracing.PhotonMappingDemo
-
 [opengl.raytracing.TransformFeedbackDemo]
 description=This demo uses transform feedback to first store the view-space positions and normals \
             of the vertices in a buffer object.\
@@ -911,6 +882,26 @@ description=Example of temporal antialiasing using reprojection but without any 
             <p>\
             Author\: Kai Burjack
 class=opengl.raytracing.tutorial.Tutorial8_2
+
+[opengl.sampling]
+description=OpenGL Sampling demos
+
+[opengl.sampling.HierarchicalSampleWarping]
+description=Demo showcasing Hierarchical Sample Warping (HSW) as first proposed in the paper \
+            "Wavelet Importance\: Efficiently Evaluating Products of Complex Functions" by Clarberg et al.\
+            <p>\
+            This demo implements importance sampling via hierarchical sample warping in its associated fragment shader \
+            by using a 2D lightmap texture and generating samples with probabilities proportional to a texel's luminance.\
+            <p>\
+            See\:\
+            <ul>\
+            <li><a href\="https\://link.springer.com/content/pdf/10.1007/978-1-4842-4427-2_16.pdf">section 16.4.2.3 HIERARCHICAL TRANSFORMATION in chapter "Transformations Zoo" of "Ray Tracing Gems".</a></li>\
+            <li><a href\="http\://graphics.ucsd.edu/~henrik/papers/wavelet_importance_sampling.pdf">"Wavelet Importance\: Efficiently Evaluating Products of Complex Functions" by Clarberg et al.</a></li>\
+            <li><a href\="https\://www.ea.com/seed/news/siggraph21-global-illumination-surfels">SIGGRAPH 21\: Global Illumination Based on Surfels</a></li>\
+            </ul>\
+            <p>\
+            Author\: Kai Burjack
+class=opengl.sampling.HierarchicalSampleWarping
 
 [opengl.shader]
 description=OpenGL Shader demos
