--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -12,19 +12,29 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        java-version: [11, 17]
-        graalvm-version: ['22.3.1']
+        java-version: [17]
+        graalvm-version: ['22.3.3']
+        graalvm-distribution: ['graalvm-community']
       fail-fast: false
 
     steps:
       - name: Git checkout
         uses: actions/checkout@v3
 
-      - name: Set up GraalVM for Java ${{ matrix.java-version }}
+      - name: Set up GraalVM ${{ matrix.graalvm-distribution }} for Java ${{ matrix.java-version }}
+        if: matrix.java-version == 17
         uses: graalvm/setup-graalvm@v1
         with:
-          version: ${{ matrix.graalvm-version }}
           java-version: ${{ matrix.java-version }}
+          distribution: ${{ matrix.graalvm-distribution }}
+          components: 'native-image'
+
+      - name: Set up GraalVM ${{ matrix.graalvm-version }} for Java ${{ matrix.java-version }}
+        if: matrix.java-version == 11
+        uses: graalvm/setup-graalvm@v1
+        with:
+          java-version: ${{ matrix.java-version }}
+          version: ${{ matrix.graalvm-version }}
           components: 'native-image'
           set-java-home: 'true'
 
@@ -36,12 +46,6 @@ jobs:
       - name: Build with Maven Wrapper (Linux)
         run: ./mvnw -V -B package
         if: runner.os != 'Windows'
-
-      - name: Fix the svm.jar of GraalVM ${{ matrix.graalvm-version }} for JDK ${{ matrix.java-version }} (Windows)
-        run: |
-          copy lib\svm-${{matrix.graalvm-version}}-${{matrix.java-version}}-MODIFIED.jar $env:GRAALVM_HOME\lib\svm\builder\svm.jar
-          dir $env:GRAALVM_HOME\lib\svm\builder
-        if: runner.os == 'Windows'
 
       - name: Build with Maven Wrapper (Windows)
         run: .\mvnw.cmd -V -B package
