--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 plugins {
     id 'application'
-    id 'org.graalvm.buildtools.native' version '0.9.20'
+    id 'org.graalvm.buildtools.native' version '0.9.25'
     id 'com.google.osdetector' version '1.7.3'
 }
 
 tasks.wrapper {
-    gradleVersion = '8.0.2'
+    gradleVersion = '8.3'
     distributionType = Wrapper.DistributionType.ALL
 }
 
 group = 'org.lwjgl'
 description = 'LWJGL3 demos with native image by GraalVM'
-version = '3.3.2-SNAPSHOT'
+version = '3.3.3-SNAPSHOT'
 
 //returns the <os>-<arch> platform string suitable for retrieval of LWJGL natives
 //(if <arch> is blank, it implies "x86_64")
@@ -37,9 +37,8 @@ def getCurrentPlatform() {
 
 ext {
     lwjglVersion = project.version
-    jomlVersion = '1.10.5'
-    swtMavenVersion = '3.123.0'  //contains Eclipse SWT 4.9.5.8 software
-    graalvmVersion = '22.3.1'
+    jomlVersion = '1.10.6-SNAPSHOT'
+    swtMavenVersion = '3.124.0'  //contains Eclipse SWT 4.9.6.0 software
 
     //LWJGL modules used: minimal OpenGL, plus bgfx, cuda, jemalloc, par, shaderc, vma, vulkan
     lwjglModules = [
@@ -69,8 +68,6 @@ repositories {
 
 dependencies {
     implementation "org.joml:joml:$jomlVersion"
-    //for compiling GraalVM substitution classes
-    compileOnly "org.graalvm.sdk:graal-sdk:$graalvmVersion"
 
     //SWT library specific to <os>-<arch> platform string
     //(for 64-bit platforms only)
@@ -250,8 +247,10 @@ graalvmNative {
             verbose = true
             fallback = false
 
+            buildArgs.add('--initialize-at-build-time=sun.security.x509.X509CertImpl')
             buildArgs.add('--initialize-at-run-time=org.lwjgl')
             buildArgs.add('--native-image-info')
+            //buildArgs.add('-march=native') //only available in GraalVM for JDK 17+
             buildArgs.add("-H:Path=$buildDir/$nativeImageDirName")
             buildArgs.add("-H:TempDirectory=$buildDir/tmp/$nativeImageDirName")
             //buildArgs.add('-H:+TraceNativeToolUsage')
