--- a/graal-cfg/linux-arm64/META-INF/native-image/reflect-config.json
+++ b/graal-cfg/linux-arm64/META-INF/native-image/reflect-config.json
@@ -634,14 +634,6 @@
   "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
 },
 {
-  "name":"org.lwjgl.demo.opengl.raytracing.PhotonMappingBindlessDemo",
-  "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
-},
-{
-  "name":"org.lwjgl.demo.opengl.raytracing.PhotonMappingDemo",
-  "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
-},
-{
   "name":"org.lwjgl.demo.opengl.raytracing.TransformFeedbackDemo",
   "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
 },
@@ -711,6 +703,10 @@
 },
 {
   "name":"org.lwjgl.demo.opengl.raytracing.tutorial.Tutorial8_2",
+  "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
+},
+{
+  "name":"org.lwjgl.demo.opengl.sampling.HierarchicalSampleWarping",
   "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
 },
 {
@@ -2253,5 +2249,8 @@
 {
   "name":"sun.security.x509.SubjectKeyIdentifierExtension",
   "methods":[{"name":"<init>","parameterTypes":["java.lang.Boolean","java.lang.Object"] }]
+},
+{
+  "name":"sun.security.x509.X509CertImpl"
 }
 ]
