--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -12,8 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        java-version: [17]
-        graalvm-version: ['22.3.3']
+        java-version: [17, 21]
         graalvm-distribution: ['graalvm-community']
       fail-fast: false
 
@@ -22,21 +21,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up GraalVM ${{ matrix.graalvm-distribution }} for Java ${{ matrix.java-version }}
-        if: matrix.java-version == 17
         uses: graalvm/setup-graalvm@v1
         with:
           java-version: ${{ matrix.java-version }}
           distribution: ${{ matrix.graalvm-distribution }}
-          components: 'native-image'
-
-      - name: Set up GraalVM ${{ matrix.graalvm-version }} for Java ${{ matrix.java-version }}
-        if: matrix.java-version == 11
-        uses: graalvm/setup-graalvm@v1
-        with:
-          java-version: ${{ matrix.java-version }}
-          version: ${{ matrix.graalvm-version }}
-          components: 'native-image'
-          set-java-home: 'true'
 
       - name: Report Java version
         run: |
@@ -51,26 +39,17 @@ jobs:
         run: .\mvnw.cmd -V -B package
         if: runner.os == 'Windows'
 
-      - name: Compress the generated Windows native executable using UPX
-        if: runner.os == 'Windows'
-        uses: crazy-max/ghaction-upx@v2
-        with:
-          version: latest
-          files: |
-            target\native-image-windows\*.exe
-          args: --best
-
       - name: Package Linux artifact
         if: runner.os == 'Linux'
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: lwjgl3-demos ${{ runner.os }} native image with SubstrateVM Java ${{ matrix.java-version }}
-          path: target/native-image-linux/lwjgl3-demos**
+          path: target/lwjgl3-demos
 
       - name: Package Windows artifact
         if: runner.os == 'Windows'
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: lwjgl3-demos ${{ runner.os }} native image with SubstrateVM Java ${{ matrix.java-version }}
-          path: target/native-image-windows/lwjgl3-demos.exe
+          path: target/lwjgl3-demos.exe
 
