--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 plugins {
     id 'application'
-    id 'org.graalvm.buildtools.native' version '0.10.0'
+    id 'org.graalvm.buildtools.native' version '0.10.2'
     id 'com.google.osdetector' version '1.7.3'
 }
 
 tasks.wrapper {
-    gradleVersion = '8.6'
+    gradleVersion = '8.9'
     distributionType = Wrapper.DistributionType.ALL
 }
 
 group = 'org.lwjgl'
 description = 'LWJGL3 demos with native image by GraalVM'
-version = '3.3.4-SNAPSHOT'
+version = '3.3.4'
 
 //returns the <os>-<arch> platform string suitable for retrieval of LWJGL natives
 //(if <arch> is blank, it implies "x86_64")
@@ -38,7 +38,8 @@ def getCurrentPlatform() {
 ext {
     lwjglVersion = project.version
     jomlVersion = '1.10.6-SNAPSHOT'
-    swtMavenVersion = '3.124.200'  //contains Eclipse SWT 4.9.6.3 software
+    swtMavenVersion = '3.126.0'  //contains Eclipse SWT 4.9.6.5 software
+    swtP2Version = '3.126.0.v20240528-0813'  //contains Eclipse SWT 4.9.6.5 software
 
     //LWJGL modules used: minimal OpenGL, plus bgfx, cuda, jemalloc, par, shaderc, vma, vulkan
     lwjglModules = [
@@ -59,9 +60,9 @@ repositories {
         url "https://oss.sonatype.org/content/repositories/snapshots"
     }
     mavenLocal()
-    //local repository for the custom-built SWT library for Windows on Arm64 -->
+    //p2 repository for Maven projects, for the SWT library for Windows on Arm64
     maven {
-        url "file://$projectDir/lib"
+        url "https://p2repository.com/mvn3/eclipse-2024-06/"
     }
 }
 
@@ -98,8 +99,8 @@ dependencies {
             break
         case 'windows-arm64':
             //No SWT library for Windows on Arm64 is yet available in Maven Central;
-            //temporarily use a local custom-built SWT library for Windows on Arm64:
-            implementation "org.eclipse.platform:org.eclipse.swt.win32.win32.aarch64:$swtMavenVersion-SNAPSHOT"
+            //temporarily use a P2 SWT library for Windows on Arm64:
+            implementation "org.eclipse.ide:org.eclipse.swt.win32.win32.aarch64:$swtP2Version"
             break
         default:
             throw new GradleException('Unknown platform for SWT: ' + currentPlatform)
@@ -171,7 +172,7 @@ run {
     //in the graal-cfg/$currentPlatform/META-INF/native-image directory.
     //This directory is read by GraalVM during the native-image build.
 
-    //jvmArgs = ["-agentlib:native-image-agent=config-merge-dir=graal-cfg/$currentPlatform/META-INF/native-image"]
+    //jvmArgs = ["-Dnative.image.config.dir=graal-cfg/$currentPlatform/META-INF/native-image"]
 }
 
 task extractLwjglManifest(type: Copy) {
