--- a/pom.xml
+++ b/pom.xml
@@ -3,26 +3,31 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.lwjgl</groupId>
     <artifactId>lwjgl3-demos</artifactId>
-    <version>3.3.4-SNAPSHOT</version>
+    <version>3.3.4</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.release>11</maven.compiler.release>
         <maven.compiler.plugin.version>3.12.1</maven.compiler.plugin.version>
-        <maven.shade.plugin.version>3.5.1</maven.shade.plugin.version>
+        <maven.shade.plugin.version>3.5.2</maven.shade.plugin.version>
         <lwjgl.version>${project.version}</lwjgl.version>
-        <swt.maven.version>3.124.200</swt.maven.version> <!-- contains Eclipse SWT 4.9.6.3 software -->
+        <swt.maven.version>3.126.0</swt.maven.version> <!-- contains Eclipse SWT 4.9.6.5 software -->
+        <swt.p2.version>3.126.0.v20240528-0813</swt.p2.version> <!-- contains Eclipse SWT 4.9.6.5 software -->
         <joml.version>1.10.6-SNAPSHOT</joml.version>
-        <native.maven.plugin.version>0.10.0</native.maven.plugin.version>
+        <native.maven.plugin.version>0.10.2</native.maven.plugin.version>
         <exec.mainClass>org.lwjgl.demo.DemoLauncher</exec.mainClass>
         <!-- default exec application is the demo launcher, but specific demo class
              can be launched directly via the following property during mvn invoke.
              (the package "org.lwjgl.demo." is prepended automatically, if not present) -->
         <class></class>
         <!-- system properties for the application when run by exec:exec command;
-             can be specified on the command line with -Dsys.props="..."
+             can be specified on the command line with -Dsys.props="...",
+             e.g. -Dsys.props="-Dorg.lwjgl.util.Debug=true"
         -->
         <sys.props></sys.props>
+        <!-- Directory for GraalVM's agent to generate (or merge with) native-image configuration files -->
+        <!-- native.image.config.dir.prop>-Dnative.image.config.dir=graal-cfg/${platform}/META-INF/native-image</native.image.config.dir.prop -->
+        <native.image.config.dir.prop></native.image.config.dir.prop>
     </properties>
     <name>lwjgl3-demos</name> <!-- name of the resulting native executable -->
     <description>LWJGL3 demos with native image by GraalVM</description>
@@ -72,12 +77,13 @@
             </properties>
             <dependencies>
                 <!-- No SWT library for Windows on Arm64 is yet available in Maven Central;
-                     temporarily use a local custom-built SWT library for Windows on Arm64 -->
+                     temporarily use a P2 SWT library for Windows on Arm64 -->
                 <dependency>
-                    <groupId>org.eclipse.platform</groupId>
+                    <groupId>org.eclipse.ide</groupId>
                     <artifactId>org.eclipse.swt.win32.win32.aarch64</artifactId>
-                    <version>${swt.maven.version}-SNAPSHOT</version>
+                    <version>${swt.p2.version}</version>
                 </dependency>
+
                 <!-- No BGFX native library is yet available for Windows on ARM64;
                      temporarily use the x64 native library, at least for required native loading
                      at runtime (but BGFX demos won't work though) -->
@@ -239,7 +245,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -249,15 +255,9 @@
                 </executions>
                 <configuration>
                     <executable>java</executable>
-                    <arguments>
-                        <!-- GraalVM's agent to generate (or merge with) native-image configuration files -->
-                        <!-- argument>-agentlib:native-image-agent=config-merge-dir=graal-cfg/${platform}/META-INF/native-image</argument -->
-                        <argument>${sys.props}</argument>
-                        <argument>-classpath</argument>
-                        <classpath/>
-                        <argument>${exec.mainClass}</argument>
-                        <argument>${class}</argument>
-                    </arguments>
+                    <commandlineArgs>
+                        ${native.image.config.dir.prop} ${sys.props} -cp %classpath ${exec.mainClass} ${class}
+                    </commandlineArgs>
                 </configuration>
             </plugin>
             <!-- extract the LWJGL manifest file -->
@@ -414,10 +414,10 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-        <!-- local repository for the custom-built SWT library for Windows on Arm64 -->
+        <!-- p2 repository for Maven projects, for the SWT library for Windows on Arm64 -->
         <repository>
-            <id>local repository</id>
-            <url>file://${basedir}/lib</url>
+            <id>eclipse-2024-06</id>
+            <url>https://p2repository.com/mvn3/eclipse-2024-06/</url>
         </repository>
     </repositories>
 
